--- a/Luftfoto/packages.config
+++ b/Luftfoto/packages.config
@@ -4,4 +4,14 @@
   <package id="cef.redist.x86" version="92.0.26" targetFramework="net472" />
   <package id="CefSharp.Common" version="92.0.260" targetFramework="net472" />
   <package id="CefSharp.WinForms" version="92.0.260" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net472" />
+  <package id="Uno.Diagnostics.Eventing" version="2.0.1" targetFramework="net472" />
+  <package id="Uno.Foundation.Logging" version="4.0.9" targetFramework="net472" />
+  <package id="Uno.SourceGenerationTasks" version="4.0.0" targetFramework="net472" />
+  <package id="Uno.UI" version="4.0.9" targetFramework="net472" />
 </packages>
